# NDK-ImageBulr

./: README.md  delete_build_directory.bat  delete_directory.py
MyApplicationNDK/app/: build.gradle
MyApplicationNDK/app/src/main/: AndroidManifest.xml
MyApplicationNDK/gradle/wrapper/: gradle-wrapper.properties
NDKBlurSimple/: settings.gradle
NDKBlurSimple/app/: build.gradle
NDKBlurSimple/gradle/wrapper/: gradle-wrapper.properties
NDKGaussianBlur/: settings.gradle
NDKGaussianBlur/GaussianBlur/: build.gradle
NDKGaussianBlur/app/: build.gradle
NDKGaussianBlur/blurlibrary/: build.gradle
NDKGaussianBlur/blurlibrary/src/main/cpp/: CMakeLists.txt  blurcore.cpp  joe_com_blurlibrary_BlurCore.h
NDKGaussianBlur/gradle/wrapper/: gradle-wrapper.properties
blur/: .gitignore  README.md  build.gradle  settings.gradle
blur/app/: build.gradle
blur/blur/: CMakeLists.txt  build.gradle
blur/gradle/wrapper/: gradle-wrapper.properties
jniblur/: README.md  build.gradle  settings.gradle
jniblur/app/: build.gradle
jniblur/gradle/wrapper/: gradle-wrapper.properties
sand/: README.md  build.gradle  settings.gradle
sand/gradle/wrapper/: gradle-wrapper.properties
sand/sample/: build.gradle  proguard-rules.pro
sand/sand-kotlin/: CMakeLists.txt  build.gradle
sand/sandlib/: CMakeLists.txt  build.gradle  proguard-rules.pro
uCrop/: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties
uCrop/.github/: ISSUE_TEMPLATE.md
uCrop/gradle/wrapper/: gradle-wrapper.properties
uCrop/sample/: build.gradle
uCrop/ucrop/: build.gradle
(+129 files in other folders)
